--- a/VCenterMigrationTool.csproj
+++ b/VCenterMigrationTool.csproj
@@ -10,7 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove="Assets\applicationIcon-1024.png" />
 		<None Remove="Assets\applicationIcon-256.ico" />
+		<None Remove="Assets\applicationIcon-256.png" />
 		<None Remove="Scripts\Get-ClusterItems.ps1" />
 		<None Remove="Scripts\Get-Clusters.ps1" />
 		<None Remove="Scripts\Get-Prerequisites.ps1" />
@@ -32,10 +34,17 @@
 		<PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
 		<PackageReference Include="System.Formats.Asn1" Version="9.0.8" />
+		<PackageReference Include="System.IO.Packaging" Version="9.0.1" />
 		<PackageReference Include="System.Management.Automation" Version="7.4.1" />
 		<PackageReference Include="System.Text.Json" Version="9.0.8" />
 		<PackageReference Include="WPF-UI" Version="4.0.3" />
 		<PackageReference Include="WPF-UI.DependencyInjection" Version="4.0.3" />
+		<PackageReference Include="WPF-UI.Tray" Version="4.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Resource Include="Assets\applicationIcon-1024.png" />
+	  <Resource Include="Assets\applicationIcon-256.png" />
 	</ItemGroup>
 
 	<ItemGroup>
