--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Models/EsxiHost.cs
+/Scripts/NIU/VMTags/.claude/settings.local.json
